Fixed overflow

--- a/frontend/src/containers/ContentContainer/ContentContainer.css
+++ b/frontend/src/containers/ContentContainer/ContentContainer.css
@@ -4,4 +4,5 @@
     height: calc(100vh - 48px);
     max-height: calc(100vh - 48px);
     padding: 24px;
+    overflow: auto;
 }
